@@ -1,6 +1,12 @@
 
 == ChangeLog (Coova Chilli current svn revision) ==
 
+* Bug fix whereby the mac address of packets from the chilli redirect are overwritten	
+* Bug fix for 'leaky bucket' timediff calculations
+* Better Terminate-Cause for administrative reset (logout)
+* Fewer defaults set in 'defaults' script - assume chilli defaults instead
+* chilliController support for older IE browsers
+
 == ChangeLog (Coova Chilli v1.0.8 svn revision 124) ==
 
 * New option ''uamdomain'' whereby entire domains, one per use of option, can be white-listed.
